    created at 00:00 hour (alec)
  - BTS#0000801: don't forget original/copy setting when printing new
    invoice (alec)
  - lms_parse_ini_file() replaced by PHP's parse_ini_file() (alec)
  - optimized GetCustomerList() by moving more operations to DB server (alec)
  - BTS#0000799: optimized GetCustomerNames() and some other SQL queries
    with customer name sorting (alec)

version 1.11.8 Belus (2009-05-19):

  - fixed query fetching invoice's author (alec)
  - lmsd/ewx-pt: fixed mac/ip change detection (alec)
  - changed length of ewx_pt_config.name column type to 32 characters (alec)
  - lmsd: added 'skip_disabled' option in ewx-pt and ewx-stm modules (alec)
  - BTS:0000787: fixed parse error in transferforms2.php (alec)
  - lmsd/hostfile: fixed 'excluded_customergroups' option query (alec)
  - fixed stats compacting (alec)
  - added division filter on Customers List (alec)
  - modified division selector (using multiselect) in numberplans (alec)
  - added simple traffic graphs (alec)
  - distinct suspended from outdated and future tariffs (chilan)
  - added Events panel in customer info + small improvements in timetable
    (Jacek Nowosielski/alec)
  - renamed node/customers "message"/"warning" to "notice" (alec)
  - renamed menu "Mailing" to "Messages" (alec)
  - added sent messages history (alec)
  - added [mail] config section for smtp_* and debug_email options (alec)
  - SMS messaging (SMSCenter support from Michał Gacek's patch) (alec)
  - added messages list panel in customer info page (alec)
  - allow to send a message to one customer (alec)
  - contrib: added module for userpanel, allowing email accounts creation
    in postfixadmin format (Paweł Rohde)
  - added finances/cashimport_checkinvoices option for auto-checking invoices
    as accounted while importing cash operations (alec)
  - arp_table_backend configuration option introduced - we can get arp table
    by external command (chilan)