@@ -30,6 +30,7 @@ version ? (????-??-??):
   - optimized GetCustomerList() by moving more operations to DB server (alec)
   - BTS#0000799: optimized GetCustomerNames() and some other SQL queries
     with customer name sorting (alec)
+  - unified order of action icons on lists
 
 version 1.11.8 Belus (2009-05-19):
 
